Added ability for user to sign in, signup, and logout

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,18 @@
 <%- include('partials/header') -%>
 
-<main class="container">
-    <div class="row justify-content-around mt-5">
-        <a href="/login" class="col-3 btn btn-primary"> Login</a>
-        <a href="/signup" class="col-3 btn btn-primary"> Signup</a>
+<main class="landing">
+    <div class="landing">
+        <h1 class="index-h1">MediTracker</h1>
+        <p class="index-p">Tracking All Your Medical Appointments In One App </p>
+        <a href="/login">
+            <button class="index-button button">
+                <span>Login</span>
+            </button>
+        </a>
+        <a href="/signup">
+            <button class="index-button button">Signup</button>
+        </a>
     </div>
 </main>
-    
 
 <%- include('partials/footer') -%>
