--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,6 @@
 <%- include('partials/header') -%>
 
-<main class="container">
-  <div class="row justify-content-center">
+<div class="signin-button row justify-content-center">
     <section class="col-6 mt-5">
       <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
       <div class="alert alert-danger"><%= el.msg %></div>
@@ -9,7 +8,7 @@
       messages.info.forEach( el => { %>
       <div class="alert alert-info"><%= el.msg %></div>
       <% }) %> <% } %>
-      <form action="/login" method="POST">
+      <form action="/login" method="POST" class=".landing">
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label"
             >Email address</label
@@ -34,7 +33,8 @@
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </section>
-  </div>
-</main>
+</div>
+
 
 <%- include('partials/footer') -%>
+
