--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,9 +1,9 @@
 <%- include('partials/header') -%>
-<div class="container">
+<div class="container profile">
   <div class="row mt-5">
       <div class="col-6">
           <div>
-              <p><strong>User Name</strong>: <%= user.userName %></p>
+              <h1 class="h1-profile">Welcome Back <%= user.userName%> !</h1>
               <p><strong>Email</strong>: <%= user.email %></p>
               <a href="/logout" class="col-3 btn btn-primary">Logout</a>
           </div>
