Added MVC for appointment rendering

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <main class="landing">
     <div class="landing">
         <h1 class="index-h1">MediTracker</h1>
-        <p class="index-p">Tracking All Your Medical Appointments In One App </p>
+        <p class="index-p">Tracking All Your Medical Appointments In One Place </p>
         <a href="/login">
             <button class="index-button button">
                 <span>Login</span>
