--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,13 +27,13 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav ml-auto">
                     <li class="navbar-item">
-                        <a href="/" class="nav-link">Home</a>
+                        <a href="/todos" class="nav-link">Home</a>
                     </li>
                     <li class="navbar-item">
-                        <a href="/profile" class="nav-link">Add Visit</a>
+                        <a href="/profile" class="nav-link">My Profile</a>
                     </li>
                     <li class="navbar-item">
-                        <a href="/feed" class="nav-link">Calendar</a>
+                        <a href="/feed" class="nav-link">Cards</a>
                     </li>
                     <li class="navbar-item">
                         <a href="/logout" class="nav-link">Logout</a>
