--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,6 @@
 }
 
 /* Index Page */
-
 body{
     background-image: url('https://img.freepik.com/free-vector/clean-medical-background_53876-97927.jpg?w=826&t=st=1664763449~exp=1664764049~hmac=a7cb151d0cd7031c2c0f5baf69411e4cb33414fab8ec8d2641df39a41604eba5');
     -webkit-background-size: cover;
@@ -15,6 +14,7 @@ body{
     background-repeat: repeat-y;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
 
 h1{
     color: rgb(78, 78, 79);
@@ -35,13 +35,14 @@ main{
     margin:auto;
 }
 
-/* .button{
+.button{
     background: rgba(48, 44, 44, .3);
     border: 2px;
     border-radius: 5px;
     padding: 3px 12px;
     margin: 5px;    
-} */
+}
+
 .landing > form > input ,  #submitButton, .landing > form > input:active, .form, .button{
     height: 35px;
     margin: 3px;
@@ -112,6 +113,213 @@ main{
 
 /* Profile Page */
 
-.h1-profile{
+.h1-profile {
+    padding-top: 2em;
+}
+
+.insurance-cards {
+    margin-top: 1em;
+    margin-bottom: 3em;
+    display: flex;
+    flex-flow: column;
+    /* align-items: center; */
+}
+
+.upload-card-h4 {
+    margin-top: 0.5em;
+}
+
+/* Feed Page */
+
+.card-feed {
+    margin-top: 2em;
     padding-top: 1em;
 }
+
+/* Post Page */
+
+.card-post {
+    padding-top: 1em;
+}
+
+.fa-trash {
+    padding-top: 1em;
+}
+
+/* Todos Page */
+
+.completed{
+    text-decoration: line-through;
+    color: gray;
+    cursor: pointer;
+}
+
+.not{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.todo-container{
+    color: rgb(45, 45, 45);
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    max-width: 70%;
+    min-width: 50vw;
+    padding: 40px;
+    transform: translate(-50%, -50%);
+    background-color: rgba(192, 192, 192, 0.694);
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
+    font-size: large;
+    margin-top: 5em;
+}
+
+.addItems{
+    margin: 2px;
+    padding: 5px;
+    border-radius: 5px;
+    width: 100%;
+    background-color: rgb(146, 146, 146);
+    color: black;
+    cursor: pointer;
+}
+
+/* form{
+    display: flex;
+    justify-content: space-around;
+} */
+
+.todo-list-item {
+    padding: 10px;
+    margin-top: 10px;
+    border: 1px grey solid;
+    border-radius: 5px;
+    background-color: rgba(113, 113, 113, 0.3);
+    width:70%;  
+}
+
+.date{
+  width:20em;
+}
+
+li span{
+    padding-right: 10px;
+}
+
+hr {
+    border: none;
+}
+
+.del{
+    padding-left: 10px;
+    color: rgba(165, 42, 42, 0.71);
+}
+
+.fas{
+    font-size: large;
+    text-decoration: none;
+    padding: 0;
+}
+
+.remaining-items{
+    padding: 10px;
+    font-weight: 700;
+    color: rgba(165, 42, 42, 0.71);
+}
+
+ /* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+  
+/* Modal Content/Box */
+.modal-content, .addItems>form{
+    display:flex;
+    align-items: stretch;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #d9d9d9;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+.modal-content > h2{
+    margin-left: 1.4rem;
+    text-transform: capitalize;
+    align-self: center;
+}
+
+
+/* .button{
+    background: rgba(48, 44, 44, .3);
+    border: 2px;
+    border-radius: 5px;
+    padding: 3px 12px;
+    margin: 5px;    
+} */
+
+
+.landing > form > input ,  #submitButton, .landing > form > input:active, .form, .button{
+    height: 35px;
+    margin: 3px;
+    background-color: rgb(78, 78, 79);
+    border-radius: 5px;
+    text-align: center;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+    color: white;
+  }
+
+#todo-form{
+    font-size: 15px;
+    padding: 10px 15px;
+    width: 100%;
+}
+  
+#submitButton{
+    margin-top: 1rem;
+    color: #888;
+}
+
+.landing > form {
+    display: flex;
+    flex-direction: column;
+}
+
+.addItems > form {
+  width: 100%;
+  margin: 1em 0;
+}
+
+td{
+  padding: .5em 2em;
+}
+
+td+td+td {
+  padding: .5em .5em;
+}
+
+.index-button{
+  width: 10em;
+}
+
+.fas {
+  cursor: pointer;
+}
+ 
