--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,33 +1,48 @@
 <%- include('partials/header') -%>
 <div class="container profile">
-  <div class="row mt-5">
+  <div class="h-100 d-flex align-items-center justify-content-center">
       <div class="col-6">
           <div>
               <h1 class="h1-profile">Welcome Back <%= user.userName%> !</h1>
               <p><strong>Email</strong>: <%= user.email %></p>
-              <a href="/logout" class="col-3 btn btn-primary">Logout</a>
           </div>
-          <div class="mt-5">
-            <h2>Add a post</h2>
+          <div class="mt-1">
+            <h4 class="upload-card-h4">Upload Driver's License</h4>
             <form action="/post/createPost" enctype="multipart/form-data" method="POST">
               <div class="mb-3">
-                  <label for="title" class="form-label">Title</label>
-                  <input type="text" class="form-control" id="title" name="title">
-              </div>
-              <div class="mb-3">
-                <label for="caption" class="form-label">Caption</label>
-                <textarea class="form-control" id="caption" name="caption"></textarea>
-              </div>
-              <div class="mb-3">
-                <label for="imgUpload" class="form-label">Image</label>
+                <!-- <label for="imgUpload" class="form-label">Image</label> -->
                 <input type="file" class="form-control" id="imageUpload" name="file">
               </div>
               <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
             </form>
           </div>
+          <div class="mt-1">
+            <h4 class="upload-card-h4">Upload Primary Insurance</h4>
+            <form action="/post/createPost" enctype="multipart/form-data" method="POST">
+              <div class="mb-3">
+                <!-- <label for="imgUpload" class="form-label">Image</label> -->
+                <input type="file" class="form-control" id="imageUpload" name="file">
+              </div>
+              <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
+            </form>
+          </div>
+          <div class="mt-1">
+          <h4 class="upload-card-h4">Upload Secondary Insurance</h4>
+          <form action="/post/createPost" enctype="multipart/form-data" method="POST">
+            <div class="mb-3">
+              <!-- <label for="imgUpload" class="form-label">Image</label> -->
+              <input type="file" class="form-control" id="imageUpload" name="file">
+            </div>
+            <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
+          </form>
+          <div class="mt-1">
+              <a class="insurance-cards btn btn-primary" href="/feed">View Insurance Cards</a>
+          </div>
+        </div>
+        </div>
       </div>
-      <div class="col-6">
-        <ul class="row list-unstyled">
+      <!-- <div class="col-6"> -->
+        <!-- <ul class="row list-unstyled">
         <% for(var i=0; i<posts.length; i++) {%>
           <li class="col-6 justify-content-between mt-5">
             <a href="/post/<%= posts[i]._id%>">
@@ -35,11 +50,8 @@
             </a>
           </li>
         <% } %>
-        </ul>
-        <div class="row justify-content-center mt-5">
-          <a class="btn btn-primary" href="/feed">Return to Feed</a>
-        </div>  
-      </div>  
+        </ul> --> 
+      <!-- </div>   -->
     </div>
   </div>
 </div>
