--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,12 +5,12 @@
         <h1 class="index-h1">MediTracker</h1>
         <p class="index-p">Tracking All Your Medical Appointments In One Place </p>
         <a href="/login">
-            <button class="index-button button">
+            <button class="index-button">
                 <span>Login</span>
             </button>
         </a>
         <a href="/signup">
-            <button class="index-button button">Signup</button>
+            <button class="index-button">Signup</button>
         </a>
     </div>
 </main>
