--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,16 +1,17 @@
 <%- include('partials/header') -%>
-  <div class="container">
-    <div class="column justify-content-center mt-5">
-      
+
+<main class="container">
+  <div class="h-100 d-flex align-items-center justify-content-center">
       <ul class="column list-unstyled">
         <% for(var i=0; i<posts.length; i++) {%>
           <li class="col-4 justify-content-center mt-5">
             <a href="/post/<%= posts[i]._id%>">
-              <img class="card-feed" src="<%= posts[i].image%>">
+              <img class="cards" src="<%= posts[i].image%>">
             </a>
           </li>
         <% } %>
-        </ul>
-    </div>
-  </div>  
+      </ul>
+  </div>
+</main>
+
 <%- include('partials/footer') -%>
