--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,11 +1,8 @@
-<%- include('partials/header') -%>
-<div class="container">
-  <div class="row justify-content-center mt-5">
-    <div class="col-6">
-      <!-- <h2><%= post.title %></h2> -->
+<!-- <%- include('partials/header') -%>
+
+<main class="container">
+  <div class="h-100 d-flex align-items-center justify-content-center"></div>
       <img class="card-post" src="<%= post.image%>" />
-      <div class="row justify-content-between">
-        <!-- <h3 class="col-3">Likes: <%= post.likes %></h3> -->
         <%if(post.user == user.id){ %>
         <form
           action="/post/deletePost/<%= post.id %>?_method=DELETE"
@@ -15,12 +12,32 @@
           <button class="btn btn-primary fa fa-trash" type="submit">Delete</button>
         </form>
         <%}%>
+</main>
+
+<%- include('partials/footer') -%>
+  -->
+
+<%- include('partials/header') -%>
+<div class="container">
+  <div class="row justify-content-center mt-5">
+    <div class="col-6">
+      <img class="img-fluid" src="<%= post.image%>" />
+      <div class="row justify-content-between">
+        <%if(post.user == user.id){ %>
+        <form
+          action="/post/deletePost/<%= post.id %>?_method=DELETE"
+          method="POST"
+          class="col-3"
+        >
+          <button class="btn btn-primary fa fa-trash" type="submit"></button>
+        </form>
+        <%}%>
       </div>
     </div>
-    <!-- <div class="col-6 mt-5">
+    <div class="col-6 mt-5">
       <a class="btn btn-primary" href="/profile">Return to Profile</a>
       <a class="btn btn-primary" href="/feed">Return to Feed</a>
-    </div> -->
+    </div>
   </div>
 </div>
 
