--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,6 +1,6 @@
-<!-- <%- include('partials/header') -%>
+<%- include('partials/header') -%>
 
-<main class="container">
+<main class="container post">
   <div class="h-100 d-flex align-items-center justify-content-center"></div>
       <img class="card-post" src="<%= post.image%>" />
         <%if(post.user == user.id){ %>
@@ -14,31 +14,5 @@
         <%}%>
 </main>
 
-<%- include('partials/footer') -%>
-  -->
+<%- include('partials/footer') -%>  
 
-<%- include('partials/header') -%>
-<div class="container">
-  <div class="row justify-content-center mt-5">
-    <div class="col-6">
-      <img class="img-fluid" src="<%= post.image%>" />
-      <div class="row justify-content-between">
-        <%if(post.user == user.id){ %>
-        <form
-          action="/post/deletePost/<%= post.id %>?_method=DELETE"
-          method="POST"
-          class="col-3"
-        >
-          <button class="btn btn-primary fa fa-trash" type="submit"></button>
-        </form>
-        <%}%>
-      </div>
-    </div>
-    <div class="col-6 mt-5">
-      <a class="btn btn-primary" href="/profile">Return to Profile</a>
-      <a class="btn btn-primary" href="/feed">Return to Feed</a>
-    </div>
-  </div>
-</div>
-
-<%- include('partials/footer') -%>
