--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,8 +1,8 @@
 <%- include('partials/header') -%>
 
-<main class="container">
+<main class="container" style="margin-top:20px;">
   <div class="signin-button row justify-content-center">
-      <section class="col-6 mt-5">
+    <section class="col-6 mt-5">
         <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
         <div class="alert alert-danger"><%= el.msg %></div>
         <% }) %> <% } %> <% if (locals.messages.info) { %> <%
@@ -10,8 +10,8 @@
         <div class="alert alert-info"><%= el.msg %></div>
         <% }) %> <% } %>
         <form action="/login" method="POST" class=".landing">
-          <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label"
+          <div class="form-group row>
+            <label for="exampleInputEmail1" class="col-sm-3 col-form-label"
               >Email address</label
             >
             <input
@@ -22,8 +22,8 @@
               name="email"
             />
           </div>
-          <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Password</label>
+          <div class="form-group row>
+            <label for="exampleInputPassword1" class="col-sm-3 col-form-label">Password</label>
             <input
               type="password"
               class="form-control"
@@ -31,7 +31,12 @@
               name="password"
             />
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <div class="row">
+            <div class="col-sm-9 offset-sm-3">
+              <button type="submit" class="btn btn-primary">Login</button>
+            </div>
+          </div>
+          
         </form>
       </section>
   </div>
