--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,8 @@
 }
 
 body{
+    margin: 0;
+    padding: none;
     background-image: url('https://img.freepik.com/free-vector/clean-medical-background_53876-97927.jpg?w=826&t=st=1664763449~exp=1664764049~hmac=a7cb151d0cd7031c2c0f5baf69411e4cb33414fab8ec8d2641df39a41604eba5');
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -14,11 +16,27 @@ body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+    scroll-padding-top: (--scroll-padding, 100px);
+}
+
+/*scrollbar*/
+::-webkit-scrollbar {
+    width: 0.7em;
+}
+  ::-webkit-scrollbar-track {
+    background: rgb(255, 255, 255);
+}
+  ::-webkit-scrollbar-thumb {
+    background: #aaa;
+}
+
+  
 main{
-    height:95vh;
+    height:90vh;
     width:80vw;
-    margin:auto;
-    /* margin-bottom: .5em; */
+    margin: auto;
 }  
 
 form{
@@ -27,6 +45,12 @@ form{
     justify-content: space-evenly;
 }
 
+/* Nav Bar */
+
+/* .navbar-brand {
+    font-family: 'dancing script';
+    font-size: 1.5em
+} */
 
 
 /* Index Page */
@@ -39,12 +63,13 @@ form{
 }
 
 .index-h1 {
-    letter-spacing: 12px;
+    letter-spacing: 8px;
     text-align: center;
     font-size: 3em;
     font-weight: 800;
     color: rgb(19, 15, 15);
     padding: 1px;
+    margin-top: 1em;
 }
 
 .index-button {
@@ -79,25 +104,29 @@ form{
 /* Login Page */
 
 .signin-button {
-    padding: 13em;
+    /* padding: 13em; */
+    margin-top: 12em;
 }
 
 .btn-primary {
-    width: 10em;
+    width: 20em;
+    max-width: 50%;
     font-size: 1em;
     font-weight: 500;
     background: #88b9b3;
-    color: rgb(22, 14, 14);
-    padding: 7px 10px;
-    margin: 5px;  
-    border: 4px;
-    border-radius: 8px;
+    color: black;
+    letter-spacing: 2px;
+    margin: auto;  
+    margin-top: 0.5em;
+    border-radius: 14px;
+    border: none;
+
 }
 
 .btn-primary:hover {
     cursor: pointer;
     letter-spacing: 4px;
-    opacity: 0.60;
+    opacity: 0.50;
 }
 
 
@@ -113,20 +142,31 @@ form{
 /* Profile Page */
 
 .profile {
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family:Oswald;
+    font-size: 1em;
 }
 
 .h1-profile {
     padding-top: 2em;
 }
 
-.upload-card{
+/* .upload-card{
     margin-top: 0.5em;
+} */
+
+.profile-btn {
+    width: 10em;
+    padding: 4px 0;
+    margin-left: 0;
+    margin-top: 0;
+    margin-bottom: 0.5em;
+
 }
 
 .insurance-cards {
     margin-top: 1.5em;
-    width: 30em;
+    width: 20em;
+    padding: 4px 0;
     display: flex;
     flex-flow: column;
     max-width: 95%;
@@ -136,18 +176,28 @@ form{
 
 /* Feed Page - NEED TO FIX SIZE OF CARDS */
 
+.feed {
+    height:90vh;
+    width:80vw;
+    margin: auto;
+}
+
 .h1-feed {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: Oswald;
     text-align: center; 
     font-size: 2em;
     font-weight: 500;
+    margin-top: 1em;
+    color: grey;
 }
 
 .cards{
-    margin: auto;
-    padding-top: 1em;
+    /* margin: auto; */
+    /* padding-top: 1em; */
     display: flex;
     flex-flow: column;
+    height:30vh;
+    margin: auto;
 }
 
 
@@ -162,10 +212,36 @@ form{
 
 /* Todos Page */
 
-.h1-todos {
-    font-size: 2em;
-    font-family: 'Oswald';
+.todo {
+    height: 100%;
 }
+
+.h1-todos {
+    font-size: 1.8em;
+    font-family: 'Oswald';
+    margin-top: 3em;
+    /* min-width: 15em; */
+}
+
+
+.addAppointment  {
+    /* width: 20em; */
+    /* min-width: 60%; */
+    font-size: 1em;
+    background: #BEE9E3;
+    color: grey;
+    padding: 0.3em;
+    margin-top: 10px;
+    border-radius: 5em;
+
+}
+
+.addAppointment:hover {
+    cursor: pointer;
+    opacity: 0.50; 
+    letter-spacing: 2px;
+}
+
 
 .landing > form {
     display: flex;
@@ -175,13 +251,13 @@ form{
 
 .landing > form > input ,  #submitButton, .landing > form > input:active, .form, .button{
     height: 30px;
-    margin: 4px;
+    margin: 3px;
+    font-size: 12px;
     background-color: white;
     border-radius: 5px;
     text-align: center;
     border: none;
-    font-size: 20px;
-    cursor: pointer;
+    font-size: 1em;
     color: grey;
   }
 
@@ -191,26 +267,26 @@ form{
     position: absolute;
     top: 45%;
     left: 50%;
-    max-width: 70%;
-    min-width: 50vw;
-    padding: 40px;
     transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
     align-items: center;
     text-decoration: none;
-    /* font-size: large; */
-    margin-top: 4em;
+    margin-top: 5em;
 }
 
 .addItems{
-    margin: 2px;
-    padding: 5px;
+    margin-top: 2px;
     border-radius: 5px;
     width: 100%;
     /* background-color: rgb(4, 4, 4); */
     color: black;
     cursor: pointer;
+}
+
+.addItems > form > label {
+    padding-top: 4px;
+    padding-bottom: 0;
 }
 
 
@@ -232,8 +308,9 @@ hr {
 }
 
 .remaining-items{
-    padding: 10px;
-    font-weight: 700;
+
+    padding-top: 0.5em;
+    margin-bottom: 4em;
     color: #5EADA5;
 }
 
@@ -244,8 +321,9 @@ hr {
     z-index: 1; 
     left: 0;
     top: 0;
+    margin-top: 9em;
     width: 100%; 
-    height: 80%;
+    height: 50%;
     overflow: auto; 
     background-color: rgba(70, 70, 70, 0.882); 
 }
@@ -262,7 +340,7 @@ hr {
 }
 
 .modal-content > h2{
-    margin-left: 1.4rem;
+    font-size: 1.2em;
     text-transform: capitalize;
     align-self: center;
 }
@@ -273,15 +351,29 @@ hr {
   margin: 1em 0;
 }
 
-td{
-  padding: .5em 2em;
+.table{
+    border: none;
+    background-color: white;
 }
 
+td{
+  padding: .5em 2em;
+
+}
 
 td+td+td {
+  border: none;
   padding: .5em .5em;
 }
 
 th{
     padding: .5em 2em;
+}
+
+footer {
+    position: fixed;
+    height: 2.2em;
+    bottom: 0;
+    width: 100%;
+    font-size: medium;
 }
