--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
         <!--GOOGLE FONT--> 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner:wght@500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Dancing+Script&family=Fredoka+One&family=Roboto&family=Roboto+Mono:wght@100;500;600&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
         <!--ICONS-->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
@@ -27,13 +27,13 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav ml-auto">
                     <li class="navbar-item">
-                        <a href="/todos" class="nav-link">My Appointments</a>
+                        <a href="/todos" class="nav-link">Appointments</a>
                     </li>
                     <li class="navbar-item">
-                        <a href="/feed" class="nav-link">Cards</a>
+                        <a href="/feed" class="nav-link">Insurance</a>
                     </li>
                     <li class="navbar-item">
-                        <a href="/profile" class="nav-link">My Profile</a>
+                        <a href="/profile" class="nav-link">Profile</a>
                     </li>
                     <li class="navbar-item">
                         <a href="/logout" class="nav-link">Logout</a>
