--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,55 +1,55 @@
 <%- include('partials/header') -%>
-<main class="container profile">
-  <div class="h-100 d-flex align-items-center justify-content-center">
-      <div class="col-6">
-          <div class="heading-profile">
-              <h1 class="h1-profile">Welcome Back <%= user.userName%>!</h1>
-              <p><strong>Email</strong>: <%= user.email %></p>
-          </div>
-          <div class="mt-1">
-            <h4 class="upload-card">Upload Driver's License</h4>
-            <form action="/post/createPost" enctype="multipart/form-data" method="POST">
-              <div class="mb-3">
-                <input type="file" class="form-control" id="imageUpload" name="file">
-              </div>
-              <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
-            </form>
-          </div>
-          <div class="mt-1">
-            <h4 class="upload-card">Upload Primary Insurance</h4>
-            <form action="/post/createPost" enctype="multipart/form-data" method="POST">
-              <div class="mb-3">
-                <input type="file" class="form-control" id="imageUpload" name="file">
-              </div>
-              <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
-            </form>
-          </div>
-          <div class="mt-1">
-          <h4 class="upload-card">Upload Secondary Insurance</h4>
-          <form action="/post/createPost" enctype="multipart/form-data" method="POST">
-            <div class="mb-3">
-              <input type="file" class="form-control" id="imageUpload" name="file">
+  <main class="container profile">
+    <div class="h-100 d-flex align-items-center justify-content-center">
+        <div class="col-6">
+            <div class="heading-profile">
+                <h1 class="h1-profile">Welcome <%= user.userName%>!</h1>
+                <p><strong>Email</strong>: <%= user.email %></p>
             </div>
-            <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
-          </form>
-          <div class="mt-1">
-              <a class="insurance-cards btn btn-primary" href="/feed">View Insurance Cards</a>
+            <div class="mt-1">
+              <h5 class="upload-card">Upload Driver's License</h5>
+              <form action="/post/createPost" enctype="multipart/form-data" method="POST">
+                <div class="mb-3">
+                  <input type="file" class="form-control" id="imageUpload" name="file">
+                </div>
+                <button type="submit" class="profile-btn btn-primary" value="Upload">Submit</button>
+              </form>
+            </div>
+            <div class="mt-1">
+              <h5 class="upload-card">Upload Primary Insurance</h5>
+              <form action="/post/createPost" enctype="multipart/form-data" method="POST">
+                <div class="mb-3">
+                  <input type="file" class="form-control" id="imageUpload" name="file">
+                </div>
+                <button type="submit" class="profile-btn btn-primary" value="Upload">Submit</button>
+              </form>
+            </div>
+            <div class="mt-1">
+            <h5 class="upload-card">Upload Secondary Insurance</h5>
+            <form action="/post/createPost" enctype="multipart/form-data" method="POST">
+              <div class="mb-3">
+                <input type="file" class="form-control" id="imageUpload" name="file">
+              </div>
+              <button type="submit" class="profile-btn btn-primary" value="Upload">Submit</button>
+            </form>
+            <div class="mt-1">
+                <a class="insurance-cards btn btn-primary" href="/feed">View Insurance Cards</a>
+            </div>
+          </div>
           </div>
         </div>
-        </div>
+        <!-- <div class="col-6"> -->
+          <!-- <ul class="row list-unstyled">
+          <% for(var i=0; i<posts.length; i++) {%>
+            <li class="col-6 justify-content-between mt-5">
+              <a href="/post/<%= posts[i]._id%>">
+                <img class="img-fluid" src="<%= posts[i].image%>">
+              </a>
+            </li>
+          <% } %>
+          </ul> --> 
+        <!-- </div>   -->
       </div>
-      <!-- <div class="col-6"> -->
-        <!-- <ul class="row list-unstyled">
-        <% for(var i=0; i<posts.length; i++) {%>
-          <li class="col-6 justify-content-between mt-5">
-            <a href="/post/<%= posts[i]._id%>">
-              <img class="img-fluid" src="<%= posts[i].image%>">
-            </a>
-          </li>
-        <% } %>
-        </ul> --> 
-      <!-- </div>   -->
     </div>
-  </div>
-</main>
+  </main>
 <%- include('partials/footer') -%>
