--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -1,14 +1,18 @@
 <%- include('partials/header') -%>
-    <main class="container">
+    <main class="container todo">
         <section class="todo-container">
         <h2 class="h1-todos"><b>Hi <%= user.userName %>,</b> <br>Add upcoming appointments here:</br> </h2>
         <section class="addItems">
             <form action="/todos/createTodo" method='POST' >
                 <label>Appointment Date:</label>
                 <input type="date" name="todoDate" min="2022-07-31" max="2025-12-31" class="form">
-                <label>Dr's Name:</label>
+                <label class="doctors">Dr's Name:</label>
                 <input type="text" placeholder="Dr. Bob Bobster" name='todoItem' class="form">
-                <input type="submit" id="submitButton" value="Add Appointment"> 
+                <label class="specialty">Specialty:</label>
+                <input type="text" placeholder="Primary Care" name='todoItem' class="form">
+                <label class="location">Location:</label>
+                <input type="text" placeholder="Location" name='todoItem' class="form">
+                <button type="submit" class="addAppointment btn-primary">Add Appointment</button>
             </form>
             <div id="myModal" class="modal">
                 <div class="modal-content">
@@ -22,31 +26,35 @@
         <% if(todos.length === 0){ %> 
             <h4 class="remaining-items">You have no upcoming medical visits.</h4> 
             <% } else { %>
-        <table>
-            <tr>
-                <th>Doctor</th>
-                <th>Date</th>
-
-            </tr>
-
-            <% todos.forEach( el => { %>
-            <tr>
-                <td class='todoItem todo-list-item' data-id='<%=el._id%>'>
-                    <span class='<%= el.completed === true ? 'completed' : 'not'%>'><%= el.todo %></span>
-                </td>
-                <td>
-                    <span class='date <%= el.completed === true ? 'completed' : 'not'%>' ><%= el.date%></span>
-                </td>
-                <td>
-                    <span class="edit fas fa-edit" data-id="<%=el._id%>" data-todo="<%= el.todo %>" data-date="<%= el.date%>"></span>
-                </td>
-                <td>
-                    <span class='del fas fa-times' data-id="<%=el._id%>"></span>
-                </td>
-            </tr>
-            <% })} %>
-
-       </table>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Doctor</th>
+                    <th>Date</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% todos.forEach( el => { %>
+                    <tr>
+                        <td class='todoItem todo-list-item' data-id='<%=el._id%>'>
+                            <span class='<%= el.completed === true ? 'completed' : 'not'%>'><%= el.todo %></span>
+                        </td>
+                        <td>
+                            <span class='date <%= el.completed === true ? 'completed' : 'not'%>' ><%= el.date%></span>
+                        </td>
+                           <td class='todoItem todo-list-item' data-id='<%=el._id%>'>
+                            <span class='<%= el.completed === true ? 'completed' : 'not'%>'><%= el.doctor %></span>
+                        </td>
+                        <td>
+                            <span class="edit fas fa-edit" data-id="<%=el._id%>" data-todo="<%= el.todo %>" data-date="<%= el.date%>"></span>
+                        </td>
+                        <td>
+                            <span class='del fas fa-times' data-id="<%=el._id%>"></span>
+                        </td>
+                    </tr>
+                <% })} %>
+            </tbody>
+        </table>
         <h3 class="remaining-items">You have <span><%= left %></span> appointments.</h2>
     </main>
 
