Added functionality to MVC

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,16 +1,32 @@
 <footer class="p-1 bg-light text-black text-center navbar-fixed-bottom">
-    <div class="container">
-      <p class="lead">Copyright &copy; MediTracker</p>
-      <a href="#" class="position-absolute bottom-0 end-0 p-1" aria-label="go to top of page">
-        <i class="bi bi-arrow-up-circle h4 text-success"></i>
-      </a>
-    </div>
-  </footer>
-  
+  <div class="container">
+    <p class="lead">Copyright &copy; MediTracker</p>
+    <a href="#" class="position-absolute bottom-0 end-0 p-1" aria-label="go to top of page">
+      <i class="bi bi-arrow-up-circle h4 text-success"></i>
+    </a>
+  </div>
+</footer>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+  <!-- jquery plugins here-->
+  <script src="js/jquery-1.12.1.min.js"></script>
+  <!-- popper js -->
+  <script src="js/popper.min.js"></script>
+  <!-- bootstrap js -->
+  <script src="js/bootstrap.min.js"></script>
+  <!-- owl carousel js -->
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/jquery.nice-select.min.js"></script>
+  <!-- contact js -->
+  <script src="js/jquery.ajaxchimp.min.js"></script>
+  <script src="js/jquery.form.js"></script>
+  <script src="js/jquery.validate.min.js"></script>
+  <script src="js/mail-script.js"></script>
+  <script src="js/contact.js"></script>
+  <!-- custom js -->
+  <script src="js/custom.js"></script>
+  <!-- main js -->
   <script src="js/main.js"></script>
 </body>
+
 </html>
