--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,23 +1,22 @@
 <%- include('partials/header') -%>
-
-  <main class="container feed">
-    <div class="row justify-content-center mt-5">
-      <% if(posts.length === 0){ %> 
-      <h1>Add your Insurance Cards <a href="/profile">here</a></h1>
-      <% } else { %>
-        <ul class="column list-unstyled">
-          <h1 class="h1-feed">Driver's License and Insurance Cards</h1>
-          <% for(var i=0; i<posts.length; i++) {%>
-            <li class="col-4 justify-content-center mt-5">
-              <a href="/post/<%= posts[i]._id%>">
-                <img class="cards" src="<%= posts[i].image%>">
-              </a>
-            </li>
-          <% } %>
-        </ul>
-      <% } %>
+<body class="background">
+  <div class="column insurance">
+    <% if(posts.length === 0){ %> 
+      <h1 class="insurance-title text-center fw-light fs-3">Add your Insurance Cards <a href="/profile">here</a></h1>
+    <% } else { %>
+      <h1 class="insurance-title text-center fw-light fs-3">Driver's License and Insurance Card</h1>
+      <ul class="col-sm-5 mx-auto list-unstyled">
+        <% for(var i=0; i<posts.length; i++) {%>
+          <li class="column justify-content-center mt-5">
+            <a href="/post/<%= posts[i]._id%>">
+              <img class="img-responsive img-thumbnail" src="<%= posts[i].image%>">
+            </a>
+          </li>
+        <% } %>
+      </ul>
+    <% } %>
     </div>
-  </main>
+</body>
 
 <%- include('partials/footer') -%>
 
