--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,18 +1,67 @@
 <%- include('partials/header') -%>
 
-<main class="landing">
-    <div class="landing">
-        <h1 class="index-h1">MediTracker</h1>
-        <p class="index-p">Tracking All Your Medical Appointments In One Place </p>
-        <a href="/login">
-            <button class="index-button">
-                <span>Login</span>
-            </button>
-        </a>
-        <a href="/signup">
-            <button class="index-button">Signup</button>
-        </a>
-    </div>
-</main>
+    <!-- banner part start-->
+    <section class="banner_part">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-5 col-xl-5">
+                    <div class="banner_text">
+                        <div class="banner_text_iner">
+                            <h5>Modern Health</h5>
+                            <h1>Track your health 
+                                in one place</h1>
+                            <p>Have you ever forgotten what day you scheduled your doctor appointment for? Or to bring in your insurance cards to a doctor's office? MediTracker helps users track all their appointments, physicians and insurance information in one application.</p>
+                            <a href="/signup" class="btn_2">Signup</a>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-7">
+                    <div class="banner_img">
+                        <img src="img/banner_img.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- banner part start-->
+
+    <!-- about us part start-->
+    <section class="about_us padding_top">
+        <div class="container">
+            <div class="row justify-content-between align-items-center">
+                <div class="col-md-6 col-lg-6">
+                    <div class="about_us_img">
+                        <img src="img/top_service.png" alt="">
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-5">
+                    <div class="about_us_text">
+                        <h2>About us</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed
+                            do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                            Quis ipsum suspendisse ultrices gravida. Risus cmodo viverra
+                            maecenas accumsan lacus vel</p>
+                        <div class="banner_item">
+                            <div class="single_item">
+                                <img src="img/icon/banner_1.svg" alt="">
+                                <h5>Wellness</h5>
+                            </div>
+                            <div class="single_item">
+                                <img src="img/icon/banner_2.svg" alt="">
+                                <h5>Made Accessible</h5>
+                            </div>
+                            <div class="single_item">
+                                <img src="img/icon/banner_3.svg" alt="">
+                                <h5>To All</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- about us part end-->
+
 
 <%- include('partials/footer') -%>
