--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,46 +1,48 @@
 <%- include('partials/header') -%>
 
-<main class="container" style="margin-top:20px;">
-  <div class="signin-button row justify-content-center">
-    <section class="col-6 mt-5">
-        <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
+<body class="background">
+    <% if (locals.messages.errors) { %>
+    <% messages.errors.forEach( el => { %>
         <div class="alert alert-danger"><%= el.msg %></div>
-        <% }) %> <% } %> <% if (locals.messages.info) { %> <%
-        messages.info.forEach( el => { %>
-        <div class="alert alert-info"><%= el.msg %></div>
-        <% }) %> <% } %>
-        <form action="/login" method="POST" class=".landing">
-          <div class="form-group row>
-            <label for="exampleInputEmail1" class="col-sm-3 col-form-label"
-              >Email address</label
-            >
-            <input
-              type="email"
-              class="form-control"
-              id="exampleInputEmail1"
-              aria-describedby="emailHelp"
-              name="email"
-            />
+    <% }) %>    
+    <% } %>
+    <% if (locals.messages.info) { %>
+        <% messages.info.forEach( el => { %>
+            <div class="alert alert-danger"><%= el.msg %></div>
+        <% }) %>    
+    <% } %>
+  <div class="container">
+    <% if (locals.messages.errors) { %>
+      <% messages.errors.forEach( el => { %>
+          <div class="alert alert-danger"><%= el.msg %></div>
+      <% }) %>    
+      <% } %>
+    <div class="row">
+      <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+        <div class="card border-0 shadow rounded-3 my-5">
+          <div class="card-body p-4 p-sm-5">
+            <h5 class="card-title text-center mb-5 fw-light fs-5">Sign In</h5>
+            <form action="/login" method="POST">
+              <div class="form-floating mb-3">
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                name="email">
+                <label for="exampleInputEmail1">Email Address</label>
+              </div>
+              <div class="form-floating mb-3">
+                <input type="password" class="form-control" id="exampleInputPassword1" name="password">
+                <label for="exampleInputPassword1">Password</label>
+              </div>
+              <div class="d-grid">
+                <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Sign
+                  in</button>
+              </div>
+            </form>
           </div>
-          <div class="form-group row>
-            <label for="exampleInputPassword1" class="col-sm-3 col-form-label">Password</label>
-            <input
-              type="password"
-              class="form-control"
-              id="exampleInputPassword1"
-              name="password"
-            />
-          </div>
-          <div class="row">
-            <div class="col-sm-9 offset-sm-3">
-              <button type="submit" class="btn btn-primary">Login</button>
-            </div>
-          </div>
-          
-        </form>
-      </section>
+        </div>
+      </div>
+    </div>
   </div>
-</main>
+</body>
 
 <%- include('partials/footer') -%>
 
