--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -1,7 +1,8 @@
 <%- include('partials/header') -%>
+<body class="background">
     <main class="container todo">
         <section class="todo-container">
-        <h2 class="h1-todos"><b>Hi <%= user.userName %>,</b> <br>Add upcoming appointments here:</br> </h2>
+        <h2 class="h1-todos"><b>Hi <%= user.userName %>,</b> <br>Add Upcoming Appointments Here:</br> </h2>
         <section class="addItems">
             <form action="/todos/createTodo" method='POST' >
                 <label>Appointment Date:</label>
@@ -26,11 +27,13 @@
         <% if(todos.length === 0){ %> 
             <h4 class="remaining-items">You have no upcoming medical visits.</h4> 
             <% } else { %>
-        <table class="table table-striped">
+        <table class="table">
             <thead>
                 <tr>
                     <th>Doctor</th>
-                    <th>Date</th>
+                    <th class="th-date">Date</th>
+                    <th class="edit-th">Edit</th>
+                    <th>Delete</th>
                 </tr>
             </thead>
             <tbody>
@@ -41,9 +44,6 @@
                         </td>
                         <td>
                             <span class='date <%= el.completed === true ? 'completed' : 'not'%>' ><%= el.date%></span>
-                        </td>
-                           <td class='todoItem todo-list-item' data-id='<%=el._id%>'>
-                            <span class='<%= el.completed === true ? 'completed' : 'not'%>'><%= el.doctor %></span>
                         </td>
                         <td>
                             <span class="edit fas fa-edit" data-id="<%=el._id%>" data-todo="<%= el.todo %>" data-date="<%= el.date%>"></span>
@@ -57,5 +57,5 @@
         </table>
         <h3 class="remaining-items">You have <span><%= left %></span> appointments.</h2>
     </main>
-
+</body>
 <%- include('partials/footer') -%>
