Updated readme and index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
                             <h5>Modern Health</h5>
                             <h1>Track your health 
                                 in one place</h1>
-                            <p>Have you ever forgotten what day you scheduled your doctor appointment for? Or to bring in your insurance cards to a doctor's office? MediTracker helps users track all their appointments, physicians and insurance information in one application.</p>
+                            <p>Have you ever forgotten what day you scheduled your doctor’s appointment? Or to bring in your driver's license and insurance cards to your appointment? We've all been there. MediTracker helps users track all their appointments, physicians, and insurance information in one application.</p>
                             <a href="/signup" class="btn_2">Signup</a>
 
                         </div>
