Fixed bug for nav-bar

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
                     </div>
                 </div>
                 <div class="col-lg-7">
-                    <div class="banner_img">
+                    <div class="img-responsive banner_img">
                         <img src="img/banner_img.png" alt="">
                     </div>
                 </div>
