--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,6 @@
 <%- include('partials/header') -%>
 
-    <!-- banner part start-->
-    <section class="banner_part">
+<section class="banner_part">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-5 col-xl-5">
@@ -10,23 +9,21 @@
                             <h5>Modern Health</h5>
                             <h1>Track your health 
                                 in one place</h1>
-                            <p>Have you ever forgotten what day you scheduled your doctor’s appointment? Or to bring in your driver's license and insurance cards to your appointment? We've all been there. MediTracker helps users track all their appointments, physicians, and insurance information in one application.</p>
+                            <p>Have you ever forgotten what day you scheduled your doctor’s appointment? We've all been there. MediTracker helps users track all their appointments, physicians, and insurance information in one application.</p>
                             <a href="/signup" class="btn_2">Signup</a>
 
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-7">
-                    <div class="img-responsive banner_img">
+                    <div class="banner_img">
                         <img src="img/banner_img.png" alt="">
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- banner part start-->
 
-    <!-- about us part start-->
     <section class="about_us padding_top">
         <div class="container">
             <div class="row justify-content-between align-items-center">
@@ -61,7 +58,5 @@
             </div>
         </div>
     </section>
-    <!-- about us part end-->
-
 
 <%- include('partials/footer') -%>
