--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,11 +34,8 @@
                 </div>
                 <div class="col-md-6 col-lg-5">
                     <div class="about_us_text">
-                        <h2>About us</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed
-                            do eiusmod tempor incididunt ut labore et dolore magna aliqua
-                            Quis ipsum suspendisse ultrices gravida. Risus cmodo viverra
-                            maecenas accumsan lacus vel</p>
+                        <h2>About Us</h2>
+                        <p>Wellness and well-being go hand in hand. The goal of MediTracker is to facilitate a platform for all patients to keep track of their medical health. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, sit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem, quod? </p>
                         <div class="banner_item">
                             <div class="single_item">
                                 <img src="img/icon/banner_1.svg" alt="">
