--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -6,7 +6,7 @@
         <section class="addItems">
             <form action="/todos/createTodo" method='POST' >
                 <label>Appointment Date:</label>
-                <input type="date" name="todoDate" min="2022-07-31" max="2025-12-31" class="form">
+                <input type="date" name="todoDate" min="2022-07-31" max="2025-12-31" class="form todoDate">
                 <label class="doctors">Dr's Name:</label>
                 <input type="text" placeholder="Dr. Bob Bobster" name='todoItem' class="form">
                 <label class="specialty">Specialty:</label>
