--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,13 +11,12 @@
                                 in one place</h1>
                             <p>Have you ever forgotten what day you scheduled your doctor’s appointment? We've all been there. MediTracker helps users track all their appointments, physicians, and insurance information in one application.</p>
                             <a href="/signup" class="btn_2">Signup</a>
-
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-7">
                     <div class="banner_img">
-                        <img src="img/banner_img.png" alt="">
+                        <img src="/img/banner_img.png" alt="">
                     </div>
                 </div>
             </div>
@@ -29,7 +28,7 @@
             <div class="row justify-content-between align-items-center">
                 <div class="col-md-6 col-lg-6">
                     <div class="about_us_img">
-                        <img src="img/top_service.png" alt="">
+                        <img src="/img/top_service.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-5">
@@ -38,15 +37,15 @@
                         <p>Wellness and well-being go hand in hand. The goal of MediTracker is to facilitate a platform for all patients to keep track of their medical health. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, sit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem, quod? </p>
                         <div class="banner_item">
                             <div class="single_item">
-                                <img src="img/icon/banner_1.svg" alt="">
+                                <img src="/img/icon/banner_1.svg" alt="">
                                 <h5>Wellness</h5>
                             </div>
                             <div class="single_item">
-                                <img src="img/icon/banner_2.svg" alt="">
+                                <img src="/img/icon/banner_2.svg" alt="">
                                 <h5>Made Accessible</h5>
                             </div>
                             <div class="single_item">
-                                <img src="img/icon/banner_3.svg" alt="">
+                                <img src="/img/icon/banner_3.svg" alt="">
                                 <h5>To All</h5>
                             </div>
                         </div>
