--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -11,10 +11,10 @@
 <!-- jQuery js -->
 <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 <!-- bootstrap js -->
-<script src="js/bootstrap.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <!-- main js -->
-<script src="js/main.js"></script>
-</body>
+<script src="/js/main.js"></script>
 
+  </body>
 </html>
