--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,27 +5,26 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>MediTracker</title>
-        <link rel="icon" href="img/favicon.png">
+        <link rel="icon" href="/img/favicon.png">
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
         <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"> -->
-        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
         <!-- themify CSS -->
-        <link rel="stylesheet" href="css/themify-icons.css">
+        <link rel="stylesheet" href="/css/themify-icons.css">
         <!-- flaticon CSS -->
-        <link rel="stylesheet" href="css/flaticon.css">
+        <link rel="stylesheet" href="/css/flaticon.css">
         <!-- style CSS -->
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="/css/style.css">
     </head>
-    <body>
-  
+    <body class="background">
      <header class="main_menu home_menu">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="/"> <img src="img/logo.png" alt="logo"> </a>
+                        <a class="navbar-brand" href="/"> <img src="/img/logo.png" alt="logo"> </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -73,6 +72,7 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="/logout"><b>Logout</b></a>
                                 </li>
+                            </ul>
                             <% } %> 
                         </div>
                         
@@ -81,5 +81,3 @@
             </div>
         </div>
     </header>
-    </body>
-</html>
