--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,18 +1,18 @@
 <%- include('partials/header') -%>
 
-<main class="container post">
-  <div class="h-100 d-flex align-items-center justify-content-center"></div>
-      <img class="card-post" src="<%= post.image%>" />
-        <%if(post.user == user.id){ %>
+<main class="container">
+  <div class="col-lg-5 mx-auto">
+      <img class="insurance-card" src="<%= post.image%>" />
+        <% if (post.user == user.id) { %>
         <form
-          action="/post/deletePost/<%= post.id %>?_method=DELETE"
+          action="/post/deletePost/<%= post.id %> ?_method=DELETE"
           method="POST"
-          class="col-3"
-        >
-          <button class="btn btn-primary fa fa-trash" type="submit">Delete</button>
+          class="col-3">
+          <button class="insurance-btn btn-primary fa fa-trash" type="submit"> Delete</button>
         </form>
         <%}%>
+  </div>      
 </main>
 
-<%- include('partials/footer') -%>  
+<%- include('partials/footer') -%>   
 
